Also see Moose::Manual::Delta for more details of, and workarounds
for, noteworthy changes.

{{$NEXT}}

2.0401 Thu, Nov 17, 2011

  [BUG FIXES]

  * Attributes with weak_ref now weaken their associated slot when they are
    initialized through a lazy default or builder. Reported by tome. (doy)

2.0400 Tue, Nov 15, 2011

  [OTHER]

  * No changes from 2.0302 (other than a few minor documentation tweaks).

2.0302 Wed, Nov 02, 2011

  [BUG FIXES]

  * Fix test failure on 5.8. (Dave Rolsky)

  * Make make_immutable return value consistent and document it to be true.
    (mst)

2.0301 Fri, Oct 21, 2011

  [BUG FIXES]

  * Fix compilation on 5.8. Reported by ether. (doy)

  * A custom error class caused a warning when the class that used it was made
    immutable. Reported by Maroš Kollár. RT #71514. (Dave Rolsky)

  [ENHANCEMENTS]

  * The enum type will now allow single value enumerations. Previously, two or
    more values were required. (rjbs)

2.0300 Fri, Sep 23, 2011

  [DEPRECATIONS]

  * The optimize_as option for type constraints has been deprecated. Use the
    inline_as option to provide inlining code instead. (Dave Rolsky)

  [API CHANGES]

  * Methods to introspect a class's methods will now return methods defined in
    UNIVERSAL (isa, can, etc.). This also means that you can wrap these
    methods with method modifiers. RT #69839. Reported by Vyacheslav
    Matyukhin. (Dave Rolsky)

  * The ->parent and ->parents method for a union now return the nearest
    common ancestor of that union's component types. See Moose::Manual::Delta
    for more details. (Dave Rolsky)

  * The ->parents method used to return an arrayref for union types, and a
    list of one or more types for all other types. Now they all return
    lists. (Dave Rolsky)

  * The ->is_subtype_of and ->is_a_type_of methods have changed their behavior
    for union types. Previously, they returned true if any of their member