@@ -3,6 +3,13 @@ for, noteworthy changes.
 
 {{$NEXT}}
 
+  [BUG FIXES]
+
+  * Re-declaring a class_type constraint that has been already declared
+    now just returns the original type constraint, rather than replacing
+    the original constraint and ergo losing any coercions that were on
+    the original constraint. (t0m)
+
 2.0401 Thu, Nov 17, 2011
 
   [BUG FIXES]
